second commit edited

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             Результаты поиска
                         </h2>
                         <div class="content-cards">
-                            <a href="/film.html" class="content-cards__item">
+                            <a href="film.html" class="content-cards__item">
                                 <div class="content-cards__item--img">
                                     <img src="./images/film.png" alt="film">
                                 </div>
@@ -63,7 +63,7 @@
                                     7.8
                                 </p>
                             </a>
-                            <a href="/film.html" class="content-cards__item">
+                            <a href="film.html" class="content-cards__item">
                                 <div class="content-cards__item--img">
                                     <img src="./images/film.png" alt="film">
                                 </div>
@@ -74,7 +74,7 @@
                                 <p class="content-cards__item--description">Фантастика, приключения</p>
                                 <p class="content-cards__item--rating">7.8</p>
                             </a>
-                            <a href="/film.html" class="content-cards__item">
+                            <a href="film.html" class="content-cards__item">
                                 <div class="content-cards__item--img">
                                     <img src="./images/film.png" alt="film">
                                 </div>
@@ -85,7 +85,7 @@
                                 <p class="content-cards__item--description">Фантастика, приключения</p>
                                 <p class="content-cards__item--rating">7.8</p>
                             </a>
-                            <a href="/film.html" class="content-cards__item">
+                            <a href="film.html" class="content-cards__item">
                                 <div class="content-cards__item--img">
                                     <img src="./images/film.png" alt="film">
                                 </div>
@@ -96,7 +96,7 @@
                                 <p class="content-cards__item--description">Фантастика, приключения</p>
                                 <p class="content-cards__item--rating">7.8</p>
                             </a>
-                            <a href="/film.html" class="content-cards__item">
+                            <a href="film.html" class="content-cards__item">
                                 <div class="content-cards__item--img">
                                     <img src="./images/film.png" alt="film">
                                 </div>
@@ -107,7 +107,7 @@
                                 <p class="content-cards__item--description">Фантастика, приключения</p>
                                 <p class="content-cards__item--rating">7.8</p>
                             </a>
-                            <a href="/film.html" class="content-cards__item">
+                            <a href="film.html" class="content-cards__item">
                                 <div class="content-cards__item--img">
                                     <img src="./images/film.png" alt="film">
                                 </div>
