--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netkliks</title>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -30,8 +31,8 @@
         <section class="search">
             <div class="container">
                 <div class="search-box">
-                    <input type="text" placeholder="Что хотите посмотреть?">
-                    <button>
+                    <input id="search-input" type="text" placeholder="Что хотите посмотреть?">
+                    <button id="search-button">
                         <img src="./images/search.svg" alt="search">
                         <span>Найти</span>
                     </button>
